--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,6 @@
-[ ] make listing of all teams and ids
-[ ] make listing of all games and ids
-[ ] make listing of all users
-[ ] show all picks by user
-[ ] show all games by week
-[ ] show scores of each user
-[ ] page to make picks
-[ ] update scores in real time
-[ ] login page
+[ ] Make pages only show data for currently logged in user
+[ ] Week selector for Picks and Picker pages
+[ ] Add Game, Pick and Score data to the Dashboard
+[ ] Add Score page
+    [ ] Implement scoring
+[ ] Add mechanism to lock in odds
