--- a/todo.txt
+++ b/todo.txt
@@ -2,9 +2,13 @@ ng build --configuration production --aot
 firebase deploy
 
 [x] Make pages only show data for currently logged in user
-[ ] Week selector for Picks and Picker pages
-[ ] Add Game, Pick and Score data to the Dashboard
-[ ] Add Score page
-    [ ] Implement scoring
-[ ] Add game control page to update games and update odds
+[x] Add Game, Pick and Score data to the Dashboard
+[x] Implement scoring
+[ ] Week selector dashboard
+[ ] Live status update for in-progress games
+[ ] Single out 'important' in-progress games
+[ ] Identify bonus opening thursday and thanksgiving weeks
+[ ] Send out emails when odds are locked and end of week results
+[ ] Add bonus stats page
+
 
